--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "pinia": "^2.3.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
