--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.3.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
@@ -24,6 +26,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "prettier": "^3.3.3",
+    "sass": "^1.83.4",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8"
   }
